--- a/rev.html
+++ b/rev.html
@@ -6,10 +6,19 @@
   <title>Revisions</title>
 </head>
 
-<h2>Project Revisions</h2>
-<br><br>
+<center>
+<h1>Revisions</h1>
+<br>
+
+<h3>Large Binocular Telescope</h3>
+<i>Rough Draft Manual</i>
+<a href="docs/large-binoculars-v1.0.pdf" target="_blank">v1.0</a>
+
+<br>
 
 <h3>Automatic Dosing Unit</h3>
-V2.0 Update
+<i>Schematic</i>
+v2.0
+<a href="https://web.archive.org/web/20231012012927/https://www.kfost.com/pdfDocs/PR01-Electrical.pdf" target="_blank">v1.0</a>
 
 </html>
