--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           <div class="project-image">
             <img src="images/binoscope-pic.jpg" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
-          <h3>Large Binoscope</h3>
+          <h3>Binoscope Prototype</h3>
           <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
           <div class="navbar">
             <p>
@@ -562,7 +562,7 @@
             <img src="images/dosing-pic.jpg" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Automatic Dosing Unit</h3>
-          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
+          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics, aquaponics, and water treatment.</p>
           <div class="navbar">
             <p>
               <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3D-viewer</b></a>
@@ -601,7 +601,7 @@
             <img src="images/truss-telescope-pic.jpg" alt="Truss Telescope CAD Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Truss-style Newtonian Telescope</h3>
-          <p>A small hobby of mine is optics, and this was a one-off project I started a while ago, lots of fun!</p>
+          <p>A small hobby of mine is optics, and this was a one-off project I started a while ago.</p>
 		  <div class="navbar">
             <p>
               <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>Onshape-3D-viewer</b></a>
