--- a/rev.html
+++ b/rev.html
@@ -10,7 +10,7 @@
 <h1>Revisions</h1>
 <br>
 
-<h3>Large Binocular Telescope</h3>
+<h3>Large Binoscope</h3>
 <i>Rough Draft Manual</i>
 <a href="docs/large-binoculars-v1.0.pdf" target="_blank">v1.0</a>
 
