--- a/index.html
+++ b/index.html
@@ -546,13 +546,13 @@
           <div class="project-image">
             <img src="images/binoscope-pic.jpg" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
-          <h3>Binoscope Prototype</h3>
+          <h3>Portable Meter-class Binoculars</h3>
           <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
           <div class="navbar">
             <p>
               <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>Onshape-3D-viewer</b></a>
               <img src="images/openNewTab.png"><br>
-              <a href="https://docs.google.com/document/d/1WxkYBWqdLyLhxgRh7ZfJaYaSsf6swe2fiz7W-Qj-lPA/edit?usp=sharing" target="_blank"><b>Google-doc</b></a>
+              <a href="docs/portable-meter-class-binoculars-v1.0.pdf" target="_blank"><b>PDF-doc</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
