--- a/rev.html
+++ b/rev.html
@@ -11,14 +11,11 @@
 <br>
 
 <h3>Large Binoscope</h3>
-<i>Rough Draft Manual</i>
-<a href="docs/large-binoculars-v1.0.pdf" target="_blank">v1.0</a>
-
+<i>How-to Manual</i>
+<a href="docs/portable-meter-class-binoculars-v1.0.pdf" target="_blank">v1.0</a>
 <br>
-
 <h3>Automatic Dosing Unit</h3>
-<i>Schematic</i>
+<i>Electrical</i>
 v2.0
-<a href="https://web.archive.org/web/20231012012927/https://www.kfost.com/pdfDocs/PR01-Electrical.pdf" target="_blank">v1.0</a>
-
+<a href="docs/automatic-dosing-unit-v1.0.pdf" target="_blank">v1.0</a>
 </html>
