--- a/rev.html
+++ b/rev.html
@@ -8,14 +8,16 @@
 
 <center>
 <h1>Revisions</h1>
+<p>Copyright 2025 Kurt J. Foster</p>
 <br>
 
-<h3>Large Binoscope</h3>
-<i>How-to Manual</i>
+<h3>Portable Meter-class Binoculars</h3>
+<i>How-to Manual</i><br>
 <a href="docs/portable-meter-class-binoculars-v1.0.pdf" target="_blank">v1.0</a>
-<br>
+<br><br>
 <h3>Automatic Dosing Unit</h3>
-<i>Electrical</i>
+<i>Electrical</i><br>
 v2.0
+v1.x
 <a href="docs/automatic-dosing-unit-v1.0.pdf" target="_blank">v1.0</a>
 </html>
