--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
           <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
           <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>3D-CAD.step</b></a>
               <img src="images/openNewTab.png"><br>
-              <a href="docs/portable-meter-class-binoculars-v1.0.pdf" target="_blank"><b>PDF-doc</b></a>
+              <a href="docs/portable-meter-class-binoculars-v1.0.pdf" target="_blank"><b>documentation.pdf</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -562,10 +562,12 @@
             <img src="images/dosing-pic.jpg" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Automatic Dosing Unit</h3>
-          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics, aquaponics, and water treatment.</p>
+          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics, aquaponics, and water treatment. CAD viewer link below contains 700+ parts in one assembly.</p>
           <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>3D-CAD.step</b></a>
+              <img src="images/openNewTab.png"><br>
+			  <a href="docs/automatic-dosing-unit-v2.0.pdf" target="_blank"><b>electrical-schematic.pdf</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -578,7 +580,7 @@
           <p>Places bearings into a housing on a conveyor line. It requires 5 DCVs, 5 pneumatic cylinders, and 12 sensors for operation.</p>
           <div class="navbar">
             <p>
-              <a href="docs/bearing-supply.pdf" target="_blank"><b>PDF-doc</b></a>
+              <a href="docs/bearing-supply.pdf" target="_blank"><b>documentation.pdf</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -591,7 +593,7 @@
           <p>Involves signal transmission between two Arduino's and a PLC while utilizing a pair of dual-axis wafer handling machines.</p>
           <div class="navbar">
             <p>
-              <a href="docs/parts-transfer.pdf" target="_blank"><b>PDF-doc</b></a>
+              <a href="docs/parts-transfer.pdf" target="_blank"><b>documentation.pdf</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -604,7 +606,7 @@
           <p>A small hobby of mine is optics, and this was a one-off project I started a while ago.</p>
 		  <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>3D-CAD.step</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -617,7 +619,7 @@
           <p>I built a custom TIG welded 6061 aluminum bike frame.</p>
 		  <div class="navbar">
             <p>
-              <a href="docs/mountain-bike.pdf" target="_blank"><b>PDF-doc</b></a>
+              <a href="docs/mountain-bike.pdf" target="_blank"><b>documentation.pdf</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -627,7 +629,8 @@
 	
     <!-- Footer Section -->
     <footer class="footer">
-      <p>&copy; 2025 by Kurt J. Foster</p>
+		<p>Tools I Used For This Website: I use Onshape for the 3D CAD, Graebert Ares Commander (A cheaper alternative to AutoCAD) for the 2D electrical and 2D mechanical drawings, Notepad++ for programming the website code, GitHub for uploading changes to the website, DigitalOcean (one of the few options for a free web droplet for website hosting), and Squarespace Domains for the '.com' owning rights. All in all, aside from the outset cost of Ares Commander, I only pay about $1/month (the cost of the '.com' domain) for the entire output you see here in docs, files, web hosting, etc. Thank you for visiting my site.</p>
+		<p>&copy; 2025 by Kurt J. Foster</p>
     </footer>
     
   </div>
