--- a/rev.html
+++ b/rev.html
@@ -17,7 +17,7 @@
 <br><br>
 <h3>Automatic Dosing Unit</h3>
 <i>Electrical</i><br>
-v2.0
+<a href="docs/automatic-dosing-unit-v2.0.pdf" target="_blank">v2.0</a>
 v1.x
 <a href="docs/automatic-dosing-unit-v1.0.pdf" target="_blank">v1.0</a>
 </html>
