--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div>
 		-->
         <h1 style="font-size: 25px;">Kurt J. Foster</h1>
-        <p>Webpage Status: <a style="color: grey">Updated August 6, 2025</a></p>
+        <p>Webpage Status: <a style="color: grey"><br>Updated August 6, 2025</a></p>
       </div>
       <div class="portfolio-apps">
         <div class="app-buttons">
@@ -286,10 +286,19 @@
 		  <a href="#" class="app-button">GitHub</a>
           <a href="#" class="app-button">Onshape</a>
 		-->
+		<p>
+			<a  style="color: grey">
+			<center>Welcome to my website. Here you<br>will find my work history and<br>some projects i'm working on.</center>
+			</a>
+		</p>
+		<p>
+			<a  style="color: grey">
+			<center>The projects section contains<br>100+ pages of docs, and a few CAD<br>files—one of which has 700+ parts.</center>
+			</a>
+		</p>
         </div>
       </div>
     </header>
-
     <!-- Work Experience Section -->
     <section id="work" class="section">
       <h2>Detailed Work History</h2>
